// Copyright 2024 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.prpc;

option go_package = "go.chromium.org/luci/grpc/prpc/prpcpb";

// Used in google.rpc.Status.details field for some pRPC protocol-level errors.
message ErrorDetails {
  oneof error {
    ResponseTooBig response_too_big = 1;
  }
}

// ResponseTooBig is returned if the server's response size exceeds either
// a client-supplied limit or a global server limit. See pRPC v1.5 docs.
//
// It accompanies UNAVAILABLE gRPC status.
message ResponseTooBig {
  // Response size that exceeded the limit if known, in bytes.
  int64 response_size = 1;
  // The value of the limit that was exceeded, in bytes.
  int64 response_limit = 2;
}
